<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_cat_lockscreen_shortcuts"
        android:title="@string/pref_lockscreen_shortcuts_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_lockscreen_shortcuts_safe_launch"
            android:summary="@string/pref_lockscreen_shortcuts_safe_launch_summary"
            android:title="@string/pref_lockscreen_shortcuts_safe_launch_title"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_settings">

        <CheckBoxPreference
            android:key="hide_icon"
            android:title="@string/hide_icon_title"/>

    </PreferenceCategory>
</PreferenceScreen>